--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "richmd-vue",
   "packageManager": "yarn@3.2.0",
   "dependencies": {
-    "richmd": "^2.2.7"
+    "richmd": "^2.2.7",
+    "vue": "next"
+  },
+  "devDependencies": {
+    "@vue/compiler-sfc": "^3.2.33"
   }
 }
