--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "richmd-vue",
+  "version": "0.2.0",
+  "description": "Use Richmd for Vue.",
   "packageManager": "yarn@3.2.0",
   "main": "src/Richmd.vue",
   "dependencies": {
